postinstall/hotrod/02_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hotrod-service
  labels:
    createdby: terraform
    datacenter: cluster # ${var.cluster_name}
spec:
  selector:
    app: hotrod
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: hotrod1
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: hotrod2
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: hotrod3
  - protocol: TCP
    port: 8083
    targetPort: 8083
    name: hotrod4
